testdata/baselines/reference/submodule/compiler/tsxReactPropsInferenceSucceedsOnIntersections.errors.txt
tsxReactPropsInferenceSucceedsOnIntersections.tsx(3,19): error TS2307: Cannot find module 'react' or its corresponding type declarations.


==== tsxReactPropsInferenceSucceedsOnIntersections.tsx (1 errors) ====
    /// <reference path="/.lib/react16.d.ts" />
    
    import React from "react";
                      ~~~~~~~
!!! error TS2307: Cannot find module 'react' or its corresponding type declarations.
    
    export type ButtonProps<T = {}> = React.ButtonHTMLAttributes<HTMLButtonElement> & {
        outline?: boolean;
    } & T;
    
    declare class Button<T = {}> extends React.Component<ButtonProps<T>> { }
    
    interface CustomButtonProps extends ButtonProps {
        customProp: string;
    }
    
    const CustomButton: React.SFC<CustomButtonProps> = props => <Button {...props} />;
    